--- a/exercise1/index.html
+++ b/exercise1/index.html
@@ -5,19 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Samuraj-project12-exercise1</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
     <ul>
-      <li>Task-1 <button class="delete">delete</button></li>
-      <li>Task-2 <button class="delete">delete</button></li>
-      <li>Task-3 <button class="delete">delete</button></li>
-      <li>Task-4 <button class="delete">delete</button></li>
-      <li>Task-5 <button class="delete">delete</button></li>
-      <li>Task-6 <button class="delete">delete</button></li>
-      <li>Task-7 <button class="delete">delete</button></li>
-      <li>Task-8 <button class="delete">delete</button></li>
-      <li>Task-9 <button class="delete">delete</button></li>
-      <li>Task-10 <button class="delete">delete</button></li>
+      <li>Task-1 <button class="delete">x</button><button class="done">Done</button></li>
+      <!-- <li data-key="1">
+        Task-1 <button data-key="1">x</button><button data-key="1">Done</button>
+      </li> -->
+      <li>Task-2 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-3 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-4 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-5 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-6 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-7 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-8 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-9 <button class="delete">x</button><button class="done">Done</button></li>
+      <li>Task-10 <button class="delete">x</button><button class="done">Done</button></li>
     </ul>
     <script src="main.js"></script>
   </body>
