--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -7,37 +7,36 @@
     <title>Samuraj-project12-exercise4</title>
     <link rel="stylesheet" href="main.css" />
   </head>
-  <body>
-    <main>
-      <h1>To Do List</h1>
-      <div class="top-wrapper">
-        <form action="">
-          <label>Type a task to do</label>
-          <input class="new-task" type="text" />
-          <div>
-            <button class="add-task">Add Task</button>
-            <button class="clear-list">Clear List</button>
-          </div>
-        </form>
-        <form action="">
-          <label>Search for a task</label>
-          <input class="search-task" type="text" />
-        </form>
-      </div>
-      <div class="bottom-wrapper">
-        <ul>
-          <li>
-            <span class="task-number">#1</span>
-            <div class="task-on-list">
-              <p>Example task</p>
-              <div class="task-btn-container">
-                <button class="done">Done</button><button class="delete">x</button>
-              </div>
+  <body class="page">
+    <header class="page__header">To Do List</header>
+    <section class="wrapper-top page__wrapper">
+      <form class="form wrapper-top__form" action="">
+        <label class="form__label">Type a task to do</label>
+        <input class="form__input form__input--new-task" type="text" />
+        <div class="form__btn-container">
+          <button class="btn form__btn btn--add-task">Add Task</button>
+          <button class="btn form__btn btn--clear-task-list">Clear Task List</button>
+        </div>
+      </form>
+      <form class="form wrapper-top__form" action="">
+        <label class="form__label">Search for a task</label>
+        <input class="form__input form__input--search-task" type="text" />
+      </form>
+    </section>
+    <section class="wrapper-bottom page__wrapper">
+      <ul class="list wrapper-bottom__list">
+        <li class="task list__item">
+          <span class="task-number task__view">#1</span>
+          <div class="task-content task__view">
+            <p class="task-content__text">Example task</p>
+            <div class="task-content__btn-container">
+              <button class="btn task-content__btn btn--finish-task">Done</button>
+              <button class="btn task-content__btn btn--delete-task">x</button>
             </div>
-          </li>
-        </ul>
-      </div>
-    </main>
+          </div>
+        </li>
+      </ul>
+    </section>
     <script src="main.js"></script>
   </body>
 </html>
