Changed title of button for clearing list

--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -15,7 +15,7 @@
         <input id="new-task" class="form__input form__input--new-task" type="text" />
         <div class="form__btn-container">
           <button class="btn form__btn btn--add-task">Add Task</button>
-          <button class="btn form__btn btn--clear-task-list" type="button">Clear Task List</button>
+          <button class="btn form__btn btn--clear-task-list" type="button">Clear Current Task List</button>
         </div>
       </form>
       <form class="form wrapper-top__form" action="">
